css/styles.css
/* ... */
.navigation {
  float: right;
  list-style: none;
  margin: 0;
}
.navigation li {
  float: left;
  padding: 0 0 0 50px;
}
.navigation li:hover {
  cursor: pointer;
  color: #a9d3d0;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
}
.navigation .active {
  cursor: pointer;
  color: #f68f67;
  font-weight: bold;
}
/* General Slides */
.slide {
  background-attachment: fixed;
  width: 100%;
  height: auto;
  position: relative;
  padding: 120px 0;
}
/* Slide 1 */
#slide1 {
  background-image: url('../images/stadium3.jpg');
  background-position: relative;
  background-size: 100% auto;
  background-color: none;
  height: 100%;
  background-repeat: no-repeat;
}
#slide1 h1 {
  margin-left: -0.2em;
  font-size: 6em;
  line-height: 0px;
  color: #fff;
  font-weight: 700;
}
#slide1 h2 {
  font-size: 2.5em;
  color: #fff;
  line-height: 0px;
  padding-bottom: 20px;
  font-weight: 400;
}
/* Slide 2 - Main*/
#slide2,
#slide6{
  background-image: -webkit-linear-gradient(top, rgba(17, 2, 49, 0.75), rgba(17, 2, 49, 0)), -webkit-linear-gradient(bottom left, #eb6670, #f67f7c, #f9ac97, #f1b79f, #e1bea7, #c3bcb0, #8aabb2, #4e95b2, #2588b6);
  background-image: -moz-linear-gradient(top, rgba(17, 2, 49, 0.75), rgba(17, 2, 49, 0)), -moz-linear-gradient(bottom left, #eb6670, #f67f7c, #f9ac97, #f1b79f, #e1bea7, #c3bcb0, #8aabb2, #4e95b2, #2588b6);
  background-image: -o-linear-gradient(top, rgba(17, 2, 49, 0.75), rgba(17, 2, 49, 0)), -o-linear-gradient(bottom left, #eb6670, #f67f7c, #f9ac97, #f1b79f, #e1bea7, #c3bcb0, #8aabb2, #4e95b2, #2588b6);
  background-image: -ms-linear-gradient(top, rgba(17, 2, 49, 0.75), rgba(17, 2, 49, 0)), -ms-linear-gradient(bottom left, #eb6670, #f67f7c, #f9ac97, #f1b79f, #e1bea7, #c3bcb0, #8aabb2, #4e95b2, #2588b6);
  background-image: linear-gradient(top, rgba(17, 2, 49, 0.75), rgba(17, 2, 49, 0)), linear-gradient(bottom left, #eb6670, #f67f7c, #f9ac97, #f1b79f, #e1bea7, #c3bcb0, #8aabb2, #4e95b2, #2588b6);
  background-size: 100%;
  background-repeat: no-repeat;
  background-attachment: fixed !important;
}
#slide2 h1 {
  font-size: 3.8em;
  line-height: 0px;
  color: #ffffff;
  font-weight: 700;
}
#slide2 h2 {
  font-size: 2em;
  color: #ffffff;
  line-height: 0px;
  padding-bottom: 20px;
  font-weight: 400;
}
.mainp {
  color: #ffffff;
}
.mainh {
  color: #ffffff;
  font-weight: bold;
  font-size: 1.5em;
}
.maind {
  color: #ffffff;
  margin-right: 1.25em;
  margin-left: 1.25em;
  margin-top: -1.25em;
}
/* Slide 3 - Information*/
#ytplayer {
  margin-top: 3em;
  margin-right: 22px;
}
#slide3 {
  background-color: #ffffff;
  color: #ffffff;
}
#slide3 h1 {
  font-size: 3.8em;
  line-height: 0px;
  color: #8a8683 !important;
  font-weight: 700;
}
#slide3 h2 {
  font-size: 2em;
  color: #8a8683 !important;
  line-height: 0px;
  padding-bottom: 0px;
  padding-top: 20px;
  font-weight: 400;
}
.informationp {

  padding-bottom: 10px;
  color: #8a8683;
}
.informationq {
margin-top: 50px;
  color: #8a8683;
}
.informationr {
  margin-top: 15px;
  color: #8a8683;
}
.informations {
  padding-top: 40px;
   margin-top: 10px;
  color: #8a8683;
}
.informationt {
  margin-top: -1px;
  color: #8a8683;
}
.informationu {
  margin-top: 50px;
  color: #8a8683;
}
#informationdata {
  margin-top: 40px;
}

/* Slide 4 - Social*/
#slide4 {
  background-image: -webkit-linear-gradient(top, rgba(17, 2, 49, 0.75), rgba(17, 2, 49, 0)), -webkit-linear-gradient(bottom left, #eb6670, #f67f7c, #f9ac97, #f1b79f, #e1bea7, #c3bcb0, #8aabb2, #4e95b2, #2588b6);
  background-size: 100%;
  background-repeat: no-repeat;
  background-attachment: local !important;
}
#slide4 h1 {
  font-size: 3.8em;
  line-height: 0px;
  color: #ffffff;
  font-weight: 700;
}
#slide4 h2 {
  font-size: 2em;
  color: #ffffff;
  line-height: 0px;
  padding-bottom: 20px;
  font-weight: 400;
}
#slide4 h3 {
  font-size: 1em;
  color: #ffffff;
  margin-bottom: 50px;
  line-height: 0px;
  font-weight: normal;
}
.socialcontent {
  margin-top: 20px;
  color: #ffffff;
}
.socialcontent strong {
  color: #ffffff;
  border: 2px solid #ffffff;
  padding: 5px 12px;
  border-radius: 100%;
  float: left;
  margin-right: 1em;
}
.socialcontent p {
  color: #ffffff;
  font-size: 13px;
  font-weight: bold;
}
.socialcontent .left {
  max-width: 90%;
}
/* Slide 5 - Search*/
#slide5 {
  /*background-color: #FFFFFF;*/
  background:url('../images/white_background.jpg');
  color: #8a8683;
}
#slide5 h1 {
  font-size: 3.8em;
  line-height: 0px;
  color: #8a8683 !important;
  font-weight: 700;
  margin: 0.5em 0px;
}
#slide5 h2 {
  font-size: 2em;
  color: #8a8683;
  line-height: 0px;
  padding-bottom: 20px;
  font-weight: 400;
}
.searchp {
  color: #8a8683;
  font-weight: normal;
  line-height: 0px;
  padding-top: 20px;
}
.searchd {
  color: #8a8683;
  font-weight: normal;
  line-height: 0px;
}
/* Slide 6 - Credits */
.creditsa {
  color:gray !important;
}
.creditsa :hover {
  cursor: pointer;
  color: #a9d3d0 !important;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
}

/* Tablet */
@media screen and (max-width: 1024px) {
  #logo {
    width: 100%;
    text-align: center;
  }
  #nav {
    width: 100%;
    text-align: center;
    margin: 10px 0;
  }
  .navigation {
    width: 100%;
    float: center;
    list-style: none;
    margin: 0;
    padding: 0;
  }
  .navigation li {
    float: left;
    width: 25%;
    padding: 0;
  }
  .slide {
    background-attachment: fixed;
    width: 100%;
    position: relative;
    padding: 150px 0;
  }
  #decorative {
    display: none;
  }
  #content {
    text-align: center;
    width: 100%;
  }
  #slide1 h1 {
    line-height: 1em;
  }
  #slide1 h2 {
    line-height: 1em;
  }
  #slide2 h1 {
    line-height: 1em;
  }
  #slide2 h2 {
    line-height: 1em;
  }
  #slide3 h1 {
    line-height: 1em;
  }
  #slide3 h2 {
    line-height: 1em;
  }
  #slide4 h1 {
    line-height: 1em;
  }
  #slide4 h2 {
    line-height: 1em;
  }
  #slide5 h1 {
    line-height: 1em;
  }
  #slide5 h2 {
    line-height: 1em;
  }
}
/* ... */

